--- a/src/utils/_print.scss
+++ b/src/utils/_print.scss
@@ -14,7 +14,7 @@
         margin: 0 auto;
         padding: 0;
         max-width: 100vw;
-        background: transparent;
+        background: $color-primary;
 
         &__inner {
             padding-bottom: 0;
@@ -127,6 +127,7 @@
 
                 &::before {
                     -webkit-text-fill-color: $color-violet;
+                    background: $color-primary;
                 }
             }
 
@@ -139,7 +140,8 @@
 
             li.badge,
             li.contact {
-                background: transparent;
+                @include rounded-gradient;
+                background: $color-primary;
                 padding: 1.5pt;
                 span {
                     @include side-font;
@@ -187,5 +189,9 @@
 
     .widget__link span {
         margin-bottom: 0;
+    }
+
+    br.print-only {
+        display: inline-flex;
     }
 }
